# ibadatfile

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE  Makefile  README.md  duties.py  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: build.yml  builld.yaml  documentation.yml
docs/: index.md
docs/api/: ibadatfile.md
ibadatfile/: __init__.py  ibadatfile.py
overrides/: _dummy.txt
src/ibadatfile/: __init__.py  ibadatfile.py  log.py
tests/: test_reading.py
