[tool.poetry]
name = "IbaDatFile"
version = "1.0.0"
description = "Pythonic wrapper for IBA dat file DLL"
readme = 'docs/index.md'
repository = "https://github.com/phil65/ibadatfile"
homepage = "https://github.com/phil65/ibadatfile"
authors = ["phil65 <philipptemminghoff@googlemail.com>"]
packages = [
    { include = "ibadatfile" },
]

[tool.poetry.dependencies]
python = ">=3.10"
pywin32 = { version = "*", markers = "platform_system == 'Windows'"}
pandas = "*"

[tool.poetry.dev-dependencies]
pytest = "^7"
pip = "^23.0"
flake8 = "^6"
pytest-cov = "^4"
mypy = "^1"
pylint = "^2.5.3"
coverage = "^7"
mkdocs = "^1.1.2"
mkdocs-material = "^9"
mkdocstrings = {version = "^0", extras = ["python"]}
pymdown-extensions = "^9"
black = "^23.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
junit_family = "xunit2"

[tool.isort]
line_length = 90
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
# atomic = true
multi_line_output = 3
force_sort_within_sections = true
combine_as_imports = true
# use_parentheses = true
force_grid_wrap = 0
# not_skip = "__init__.py"
skip_glob = ["*/setup.py", "*/__init__.py"]
# filter_files = true

# known_first_party = "poetry"
# known_third_party = [
#     "cachecontrol",
#     "cachy",
#     "cleo",
#     "clikit",
#     "html5lib",
#     "httpretty",
#     "jsonschema",
#     "keyring",
#     "pexpect",
#     "pkginfo",
#     "pyparsing",
#     "pytest",
#     "requests",
#     "requests_toolbelt",
#     "shellingham",
#     "tomlkit",
# ]

[tool.black]
line-length = 90
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.9.0"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "docs/changelog.md"
version_files = [
    "ibadatfile/__init__.py:__version__",
    "setup.py:version",
    "pyproject.toml:version",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
