[project]
name = "IbaDatFile"
version = "1.0.0"
description = "Pythonic wrapper for IBA dat file DLL"
readme = "docs/index.md"
requires-python = ">=3.10"
authors = [{ name = "phil65", email = "philipptemminghoff@googlemail.com" }]
dependencies = [
  "pandas",
  "pywin32; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/phil65/ibadatfile"
Repository = "https://github.com/phil65/ibadatfile"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pip>=23.0",
  "flake8>=6",
  "pytest-cov>=4",
  "mypy>=1",
  "pylint>=2.5.3",
  "coverage>=7",
  "mkdocs>=1.1.2",
  "mkdocs-material>=9",
  "mkdocstrings[python]>=0",
  "pymdown-extensions>=9",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 90
target-version = ["py37"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.9.0"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "docs/changelog.md"
version_files = [
  "ibadatfile/__init__.py:__version__",
  "setup.py:version",
  "pyproject.toml:version",
]

[tool.hatch.build.targets.wheel]
packages = ["ibadatfile"]

[tool.isort]
line_length = 90
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
force_sort_within_sections = true
combine_as_imports = true
force_grid_wrap = 0
skip_glob = ["*/setup.py", "*/__init__.py"]

[tool.pytest.ini_options]
junit_family = "xunit2"
minversion = "6.0"
testpaths = [
  "tests",
]
